# short-url-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: main.py
app/api/routers/: url_router.py
app/middleware/: rate_limit.py
app/models/: base.py  short_url.py
app/peewee_models/: __init__.py  blacklist.py  enums.py  field.py  urls.py
app/schemas/: enums.py  requests.py  responses.py
test/: test_url_router.py
