[project]
name = "short-url-service"
version = "0.1.0"
description = "A RESTful URL shortening service built with FastAPI. It provides APIs to create short URLs and redirect users to the original URLs, with expiration and rate limiting."
authors = ["Simon Chu <simonchu199510@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/xchux/short-url-service"

[project.dependencies]
fastapi = "3.18.1"
uvicorn = "0.34.2"
pydantic = "2.11.4"
starlette = "0.46.2"
mysql-connector-python = "9.3.0"
peewee = "3.18.1"
pymysql = "1.1.1"
python-dotenv = "1.1.0"
redis = "6.0.0"

[project.optional-dependencies]
test = ["pytest"]
lint = ["ruff"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.pdm]
[tool.pdm.scripts]
start = "uvicorn app.main:app --reload"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "test"]
select = ["E", "F", "W", "I"]
